# bled-telegram-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  logging.dev.json  logging.prod.json  main.py  pyproject.toml
app/: __main__.py  config.py  logger_config.py  utils.py
app/bot/: __init__.py
app/bot/filters/: __init__.py  is_bled_chat.py
app/bot/handlers/: __init__.py
app/bot/handlers/chat/: __init__.py  chat_gpt.py  ping.py  wiki.py
app/lib/: wiki_api.py
app/lib/chatpt/: chat_gpt.py  types.py
app/libs/: wiki_api.py
app/libs/chatgpt/: __init__.py  abc.py  chat_gpt.py
app/libs/http/: aiohttp.py
